Fix: sécurisation du parsing JSON pour le login en production

--- a/client/index.html
+++ b/client/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SalonPilot</title>
+    <title>Witstyl</title>
     
     <!-- Script d'initialisation du thème pour éviter le flash rose -->
     <script>
       (function() {
         try {
-          const LS_KEY = "salonpilot.theme.v1";
+          const LS_KEY = "witstyl.theme.v1";
           const DEFAULT_PRIMARY = "hsl(0 0% 35%)";
           const raw = localStorage.getItem(LS_KEY);
           let primary = DEFAULT_PRIMARY;
