fix: correct 401 error on Reports page
Frontend:
- Improve useReportsData hook to handle isHydrating state
- Don't display 401 errors during auth loading phase
- Filter AUTH_LOADING errors from error display
- Wait for auth hydration before enabling query

Backend:
- Align /api/salons/:salonId/reports route with /api/salons/:salonId/appointments
- Use same salon lookup logic (try normalized, prefixed, raw, then by user_id)
- Improve error logging with timestamps
- Ensure consistent authentication check

Tests:
- Add reports endpoint test to test-api-prod.ts
- Add reports endpoint test to test-vercel-prod.ts

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Witstyl</title>
+    <!-- Favicon - les fichiers seront ajoutés dans client/public/ quand disponibles -->
+    <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico" /> -->
     
     <!-- Script d'initialisation du thème pour éviter le flash rose -->
     <script>
